Fixed scroll-margin-top for responsivity on narrower screens.

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -26,6 +26,7 @@ header {
     align-items: center;
     padding: 10px;
     background-color: #001170;
+    z-index: 900;
   }
 
 #logo {
@@ -51,9 +52,19 @@ header {
 }
 
 @media (max-width: 800px) {
+
     .nav-bar {
         grid-template-columns: repeat(auto-fill, minmax(100px, 1fr));
-    }
+    };
+
+    .regular-section p, li {
+        font-size: 12px;
+    };
+
+    .regular-section h1 {
+        padding-top: 70px;
+        margin-top: -70px;
+    };
 }
 
 hr {
@@ -144,19 +155,31 @@ a:active {
 
 #hero-scales {
     margin-left: auto;
+    margin-right: 100px;
     max-width: 550px;
+}
+
+@media (max-width: 1300px) {
+    #hero-scales {
+        margin-right: 20px;
+        margin-left: auto;
+    };
 }
 
 .regular-section {
     height: 100vh;
     width: 90vw;
-    padding: 10px;
+    padding: 20px;
     margin-left: auto;
     margin-right: auto;
     scroll-margin-top: 10vh;
     display: flex;
     flex-direction: column;
-    background-color: azure;
+    background: #fff;
+}
+
+.info-section {
+    scroll-margin-top: 12vh;
 }
 
 .regular-section h1 {
@@ -205,7 +228,6 @@ button:active {
     flex-direction: column;
     align-items: center;
     margin-top: 50px;
-    margin-bottom: 50px;
     max-width: 300px;
     min-width: 150px;
 }
@@ -228,7 +250,12 @@ button:active {
     pointer-events: auto;
 }
 
+@media (max-width: 700px) {
 
+    .regular-section p, li {
+        font-size: 15px !important
+    }
+}
 
 
 
@@ -307,6 +334,11 @@ button:active {
     #hero-scales {
         max-width: 90%;
         margin-left: 0px;
+        margin-right: 0px;
+    }
+
+    #hero-text {
+        margin-left: 0px;
     }
 
     h1 {
@@ -346,3 +378,4 @@ button:active {
     }
 
   }
+
